notebooks and data to reproduce the figures in the article

--- a/src/krippendorff_alpha.ipynb
+++ b/src/krippendorff_alpha.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "id": "ad295e24",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 10,
    "id": "331d82ed",
    "metadata": {},
    "outputs": [],
@@ -34,12 +34,12 @@
    "id": "6e00e983",
    "metadata": {},
    "source": [
-    "### Step 2: elegibility phase"
+    "### Step 2: screening phase"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 12,
    "id": "f2d09c29",
    "metadata": {},
    "outputs": [
@@ -47,13 +47,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Krippendorff's alpha for nominal metric:  0.7563103324991062\n"
+      "Krippendorff's alpha for nominal metric:  0.7696042849839898\n"
      ]
     }
    ],
    "source": [
     "columns_of_interest_step2 = [\"Reviewer1\", \"Reviewer2\", \"Reviewer3\", \"Reviewer4\", \"Reviewer5\"]\n",
-    "scoref_step2 = \"../data/step2_eligibility.csv\"\n",
+    "scoref_step2 = \"../data/scores/step2_screening.csv\"\n",
     "\n",
     "reliability_data_step2 = get_reliability_data(scoref_step2, columns_of_interest_step2)\n",
     "\n",
@@ -68,12 +68,12 @@
    "id": "7ddb0c87",
    "metadata": {},
    "source": [
-    "### Step3a: Inclusion hyperprolific authors-related works"
+    "### Step3a: Eligibility hyperprolific authors-related works"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 7,
    "id": "203d430f",
    "metadata": {},
    "outputs": [
@@ -81,13 +81,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Krippendorff's alpha for nominal metric:  0.82803924829536\n"
+      "Krippendorff's alpha for nominal metric:  0.838905325443787\n"
      ]
     }
    ],
    "source": [
     "columns_of_interest_step3a = [\"Reviewer1\", \"Reviewer2\", \"Reviewer3\", \"Reviewer4\", \"Reviewer5\"]\n",
-    "scoref_step3a = \"../data/step3_inclusionHyperprolific.csv\"\n",
+    "scoref_step3a = \"../data/scores/step3_eligibilityHyperprolific.csv\"\n",
     "\n",
     "reliability_data_step3a = get_reliability_data(scoref_step3a, columns_of_interest_step3a)\n",
     "\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 8,
    "id": "a47f16a1",
    "metadata": {},
    "outputs": [
@@ -115,13 +115,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Krippendorff's alpha for nominal metric:  0.9344749257382492\n"
+      "Krippendorff's alpha for nominal metric:  0.9113342898134864\n"
      ]
     }
    ],
    "source": [
     "columns_of_interest_step3b = [\"Reviewer1\", \"Reviewer2\", \"Reviewer3\", \"Reviewer4\"]\n",
-    "scoref_step3b = \"../data/step3_inclusionRelatedBehavior.csv\"\n",
+    "scoref_step3b = \"../data/scores/step3_eligibilityRelatedBehaviors.csv\"\n",
     "\n",
     "reliability_data_step3b = get_reliability_data(scoref_step3b, columns_of_interest_step3b)\n",
     "\n",
@@ -130,6 +130,14 @@
     "    krippendorff.alpha(reliability_data=reliability_data_step3b, level_of_measurement=\"nominal\"),\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffbbf71c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
